src/objects/Legal_Addendum_Onboarding_Map__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>Overall T&amp;C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial T&amp;C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer Addendum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complementary Partner Addendum</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>en_US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pt_BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zh_CN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ko</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_Document_Name__c</fullName>
        <label>Legal Document Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Document__c</fullName>
        <label>Legal Document</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Program__c</fullName>
        <label>Partner Program</label>
        <referenceTo>Partner_Program__c</referenceTo>
        <relationshipLabel>Legal Addendum Onboarding Maps</relationshipLabel>
        <relationshipName>Legal_Addendum_Onboarding_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Category__c</fullName>
        <formula>TEXT(Partner_Program__r.Category_Classification__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Legal Addendum Onboarding Map</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legal Addendum Onboarding Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>